implement options to generate testnet and witness addresses

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -7,7 +7,7 @@ SOURCES += $(wildcard *.cpp applets/*.cpp common/*.cpp libsatoshi/*.cpp)
 $(patsubst %.cpp,$(OBJDIR)/%.o,$(wildcard *.cpp applets/*.cpp libsatoshi/*.cpp)) : CPPFLAGS += -I.
 
 
-BTCTOOL_OBJECTS := $(addprefix $(OBJDIR)/,btctool.o util.o $(addprefix applets/,address.o addresses.o decode16.o decode58.o decode64.o decrypt.o disasm.o encode16.o encode58.o encode64.o encrypt.o privkey.o privkeys.o pubkey.o pubkeys.o rmd160.o sha256.o) $(addprefix common/,aes.o base64.o fd.o ecp.o fp.o hex.o io.o mpn.o pbkdf2.o ripemd.o scrypt.o sha.o termios.o) $(addprefix libsatoshi/,base58check.o script.o types.o))
+BTCTOOL_OBJECTS := $(addprefix $(OBJDIR)/,btctool.o util.o $(addprefix applets/,address.o addresses.o decode16.o decode58.o decode64.o decrypt.o disasm.o encode16.o encode58.o encode64.o encrypt.o privkey.o privkeys.o pubkey.o pubkeys.o rmd160.o sha256.o) $(addprefix common/,aes.o base64.o cli.o fd.o ecp.o fp.o hex.o io.o mpn.o pbkdf2.o ripemd.o scrypt.o sha.o termios.o) $(addprefix libsatoshi/,base58check.o script.o types.o))
 BTCTOOL := $(BINDIR)/btctool$(EXEC_SUFFIX)
 ALL += $(BTCTOOL)
 
